--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -22,5 +22,23 @@
   },
   "rate_dontRemindMe": {
     "message": "Never show this again"
+  },
+
+
+  //SHARE MENU
+  "share_menu_title": {
+    "message": "Share this app with your friends"
+  },
+  "share_fb": {
+    "message": "Share on Facebook"
+  },
+  "share_twitter": {
+    "message": "Share on Twitter"
+  },
+  "share_twitter_payload": {
+    "message": "Now you can use WhatsApp in your computer with #whatschrome! http://goo.gl/6vYqtI"
+  },
+  "share_link": {
+    "message": "Copy Chrome Store url"
   }
 }
