Fixed spanish typo

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -5,7 +5,7 @@
 
   //RATE
   "rate_doYouLike": {
-    "message": "Te gusta WhatsChrome?"
+    "message": "¿Te gusta WhatsChrome?"
   },
   "rate_rate5star": {
     "message": "Haz clic aquí y danos 5 estrellas"
