Fixed spanish typo

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -37,6 +37,6 @@
     "message": "¡Ya puedes usar WhatsApp en tu computador con #whatschrome! http://goo.gl/6vYqtI"
   },
   "share_link": {
-    "message": "Copiar el enláce de descarga"
+    "message": "Copiar el enlace de descarga"
   }
 }
