Minor portuguese changes

--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -26,7 +26,7 @@
 
   //SHARE MENU
   "share_menu_title": {
-    "message": "Compartilhe este aplicativo com os seus amigos"
+    "message": "Compartilhe WhatsChrome com amigos"
   },
   "share_fb": {
     "message": "Compartilhar no Facebook"
